<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.btssio.edf_florian.ModificationClientActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" >

                <TextView
                    android:id="@+id/modifCli_txvIdentifiant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:text="@string/identifiant" />

                <TextView
                    android:id="@+id/modifCli_txvIdentifiantValeur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" >

                <TextView
                    android:id="@+id/modifCli_txvIdentifite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/identite" />

                <TextView
                    android:id="@+id/modifCli_txvIdentiteValeur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/modifCli_txvTelephone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telephone" />

                <TextView
                    android:id="@+id/modifCli_txvTelephoneValeur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/modifCli_txvAdresse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="50dp"
                android:text="@string/adresse" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp" >

                <TextView
                    android:id="@+id/modifCli_txvAdresseValeur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/modifCli_txvCodePostalValeur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/modifCli_txvVilleValeur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp" />

            </LinearLayout>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp" >

            <TableRow
                android:id="@+id/modifCli_tbrCompteur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/modifCli_txvCompteur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/compteur" />

                <TextView
                    android:id="@+id/modifCli_txvCompteurValeur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:id="@+id/modifCli_tbrAncienReleve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/modifCli_txvAncienReleve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/ancien_releve" />

                <TextView
                    android:id="@+id/modifCli_txvAncienReleveValeur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:id="@+id/modifCli_tbrDateAncienReleve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/modifCli_txvDateAncienReleve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="À la date du :" />

                <TextView
                    android:id="@+id/modifCli_txvDateAncienReleveValeur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:id="@+id/modifCli_tbrReleve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/modifCli_txvReleve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/releve" />

                <EditText
                    android:id="@+id/modifCli_edtReleve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal" >
                    <requestFocus />
                </EditText>

            </TableRow>

            <TableRow
                android:id="@+id/modifCli_tbrSituation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/modifCli_txvSituation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/situation" />

                <EditText
                    android:id="@+id/modifCli_edtSituation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/modifCli_btnAfficherSignature"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/afficher_signature" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp" >

            <Button
                android:id="@+id/modifCli_btnGeoloc"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/geoloc" />

            <Button
                android:id="@+id/modifCli_btnValider"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="20dp"
                android:text="@string/valider" />

            <Button
                android:id="@+id/modifCli_btnAnnuler"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/annuler" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
